putting on shelf

--- a/css/positioning/octopus.css
+++ b/css/positioning/octopus.css
@@ -1,14 +1,15 @@
-.sillyoctopus {
-	position: relative;
-	z-index: -1
-}
-.octopus {
-	z-index: -2;
-}
-.hat {
-	position: absolute;
-	top: 30px;
-}
-.glasses {
-	position: absolute;
-}
+	.octopus {
+		position: absolute;
+		top: 80px;
+		left: 40px;
+		z-index:-1}
+	.hat {position: absolute;
+		top: 10px;
+		left: 20px;
+		z-index: +1
+	}
+	.glasses {
+		position: absolute;
+		top: 180px;
+		left: 80px;
+	z-index: +0}
