--- a/css/css-demo/practice.css
+++ b/css/css-demo/practice.css
@@ -1,3 +1,15 @@
 #contact-info {
 	font-size: .8em
 }
+
+.job {
+	background: #e9e5dc;
+	border-radius: 50px;
+	padding: 15px;
+	margin-top: 5px;
+	margin-bottom: 7px;
+}
+
+.list {
+  font-size: .8em;
+}
